--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h1 class="title">MP40 Build</h1>
                     <div class="weapon-showcase">
                         <div class="gun">
-                            <img class="mp40" src="/images/mp40.jpg" alt="">
+                            <img class="mp40" src="images/mp40.jpg" alt="">
                         </div>
                         <div class="build">
                             <!-- <img class="background-build" src="/images/BOCW-S3-Announcement-TOUT.jpg" alt=""> -->
