--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <img class="mp40" src="images/mp40.jpg" alt="">
                         </div>
                         <div class="build">
-                            <!-- <img class="background-build" src="/images/BOCW-S3-Announcement-TOUT.jpg" alt=""> -->
+                            <!-- <img class="background-build" src="images/BOCW-S3-Announcement-TOUT.jpg" alt=""> -->
                             <video class="backgroundvideo-build" src="/videos/FAWWK.mp4" muted autoplay loop></video>
                             <ul>
                                 <li class="perklist">
@@ -130,7 +130,7 @@
                             </ul>
                         </div>
                         <div class="map">
-                            <img class="rebirth" src="/images/rebirth.jpg" alt="">
+                            <img class="rebirth" src="images/rebirth.jpg" alt="">
                         </div>
 
                     </div>
@@ -141,10 +141,10 @@
                 <h1 class="title">Sykov Build</h1>
                 <div class="weapon-showcase">
                     <div class="gun">
-                        <img class="mp40" src="/images/sykov.jpeg" alt="">
+                        <img class="mp40" src="images/sykov.jpeg" alt="">
                     </div>
                     <div class="build">
-                        <img class="weapon-middle" src="/images/sykov.jpg" alt="">
+                        <img class="weapon-middle" src="images/sykov.jpg" alt="">
                         <ul class="perklist1">
                             <li>
                                 <div class="attachment-flex-space-between">
@@ -236,7 +236,7 @@
                 <h1 class="title">MP40 Build</h1>
                 <div class="weapon-showcase">
                     <div class="gun">
-                        <img class="mp40" src="/images/mp40.jpg" alt="">
+                        <img class="mp40" src="images/mp40.jpg" alt="">
                     </div>
                     <div class="build">
                         <ul>
@@ -318,7 +318,7 @@
                         </ul>
                     </div>
                     <div class="map">
-                        <img class="rebirth" src="/images/rebirth.jpg" alt="">
+                        <img class="rebirth" src="images/rebirth.jpg" alt="">
                     </div>
 
                 </div>
@@ -328,7 +328,7 @@
                 <h1 class="title">MP40 Build</h1>
                 <div class="weapon-showcase">
                     <div class="gun">
-                        <img class="mp40" src="/images/mp40.jpg" alt="">
+                        <img class="mp40" src="images/mp40.jpg" alt="">
                     </div>
                     <div class="build">
                         <ul>
@@ -410,7 +410,7 @@
                         </ul>
                     </div>
                     <div class="map">
-                        <img class="rebirth" src="/images/rebirth.jpg" alt="">
+                        <img class="rebirth" src="images/rebirth.jpg" alt="">
                     </div>
 
                 </div>
