--- a/artist.html
+++ b/artist.html
@@ -22,7 +22,7 @@
         <!-- <video class="background-video" src="/videos/Comethazine - Six Flags (Official Music Video).mp4" muted loop -->
         <!-- autoplay></video> -->
 
-        <video class="background-video" src="/videos/CYGN Final Animation.mp4" muted loop autoplay></video>
+        <video class="background-video" src="videos/CYGN Final Animation.mp4" muted loop autoplay></video>
 
 
         <div class="navbar">
@@ -63,7 +63,7 @@
                     <!-- XXXTENTACION -->
                     <a href="https://open.spotify.com/artist/15UsOTVnJzReFVN1VCnxy4" target="_blank">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/rappers/xxxtentacion.jpg" alt="">
+                            <img class="artist-img" src="images/rappers/xxxtentacion.jpg" alt="">
                             <h2 class="artist-name">XXXTENTACION</h2>
 
                         </div>
@@ -72,7 +72,7 @@
                     <!-- CARTI -->
                     <a href="https://open.spotify.com/artist/699OTQXzgjhIYAHMy9RyPD" target="_blank">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/rappers/carti.jpg" alt="">
+                            <img class="artist-img" src="images/rappers/carti.jpg" alt="">
                             <h2 class="artist-name">Playboi Carti</h2>
                         </div>
                     </a>
@@ -88,7 +88,7 @@
                     <!-- Comethazine -->
                     <a href="https://open.spotify.com/artist/1iJdyDcY98X3GMnUesl7tf" target="_blank">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/rappers/comethazine.jpg" alt="">
+                            <img class="artist-img" src="images/rappers/comethazine.jpg" alt="">
                             <h2 class="artist-name">Comethazine</h2>
                         </div>
                     </a>
@@ -96,7 +96,7 @@
                     <!-- Pop Smoke -->
                     <a href="https://open.spotify.com/artist/0eDvMgVFoNV3TpwtrVCoTj" target="_blank">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/rappers/popsmoke.jpg" alt="">
+                            <img class="artist-img" src="images/rappers/popsmoke.jpg" alt="">
                             <h2 class="artist-name">Pop Smoke</h2>
                         </div>
                     </a>
@@ -105,7 +105,7 @@
                     <a href="https://open.spotify.com/artist/1grN0519h2zYqpRtYbDZAl" target="_blank">
                         <div class="artist-images">
 
-                            <img class="artist-img" src="/images/rappers/larryjune.jpg" alt="">
+                            <img class="artist-img" src="images/rappers/larryjune.jpg" alt="">
                             <h2 class="artist-name">Larry June</h2>
 
                         </div>
@@ -129,7 +129,7 @@
                     <!-- Birdie Bands -->
                     <a href="https://open.spotify.com/artist/44CuCf1NgVzB4fPiAgpNoQ" target="_blank">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/producers/me.jpg" alt="">
+                            <img class="artist-img" src="images/producers/me.jpg" alt="">
                             <h2 class="artist-name">Birdie Bands</h2>
 
                         </div>
@@ -138,7 +138,7 @@
                     <!-- Fly Melodies -->
                     <a href="https://www.instagram.com/flymelodies/" target="_blank">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/producers/fly melodies.jpg" alt="">
+                            <img class="artist-img" src="images/producers/fly melodies.jpg" alt="">
                             <h2 class="artist-name">Fly Melodies</h2>
                         </div>
                     </a>
@@ -146,7 +146,7 @@
                     <!-- Pierre Bourne -->
                     <a href="https://open.spotify.com/artist/3x3jSlhyv5CiCZDZlaTq0M" target="_blank">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/producers/pierre.jpeg" alt="">
+                            <img class="artist-img" src="images/producers/pierre.jpeg" alt="">
                             <h2 class="artist-name">Pierre Bourne</h2>
                         </div>
                     </a>
@@ -155,7 +155,7 @@
                     <a href="https://ca.linkedin.com/in/kassandra-f-573615143?trk=public_profile_browsemap"
                         target="_blank">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/producers/kassandra.jpg" alt="">
+                            <img class="artist-img" src="images/producers/kassandra.jpg" alt="">
                             <h2 class="artist-name">Prod. KC</h2>
                         </div>
                     </a>
@@ -163,7 +163,7 @@
                     <!-- Zoey -->
                     <a href="#">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/producers/zoey1.jpg" alt="">
+                            <img class="artist-img" src="images/producers/zoey1.jpg" alt="">
                             <h2 class="artist-name">Zoey Beats</h2>
                         </div>
                     </a>
