--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <section id="home">
-        <video class="background-video" src="/videos/CYGN Final Animation.mp4" muted loop autoplay></video>
+        <video class="background-video" src="videos/CYGN Final Animation.mp4" muted loop autoplay></video>
 
         <div class="navbar">
 
