--- a/index.html
+++ b/index.html
@@ -224,10 +224,8 @@
                         </ul>
                     </div>
                     <div class="map">
-                        <!-- <img class="rebirth" src="/images/rebirth.jpg" alt=""> -->
-                        <video class="backgroundvideo-third" src="/videos/pistol kills x2.mp4" muted autoplay
-                            loop></video>
-                    </div>
+                            <img class="rebirth" src="images/rebirth.jpg" alt="">
+                        </div>
 
                 </div>
             </div>
