--- a/artist.html
+++ b/artist.html
@@ -80,7 +80,7 @@
                     <!-- DRAKE -->
                     <a href="https://open.spotify.com/artist/3TVXtAsR1Inumwj472S9r4" target="_blank">
                         <div class="artist-images">
-                            <img class="artist-img" src="/images/rappers/drake.jpg" alt="">
+                            <img class="artist-img" src="images/rappers/drake.jpg" alt="">
                             <h2 class="artist-name">Drake</h2>
                         </div>
                     </a>
