--- a/artist.html
+++ b/artist.html
@@ -9,6 +9,9 @@
     <!-- STYLES -->
     <link rel="stylesheet" href="styles.css">
 
+    <!-- SCRIPT -->
+    <script src="https://kit.fontawesome.com/ff53d621e9.js" crossorigin="anonymous"></script>
+
     <!-- LINK ICON -->
     <link rel="shortcut icon" href="https://blissful-hugle-8249d8.netlify.app/images/flexbox-icon.png"
         type="image/x-icon">
@@ -178,6 +181,58 @@
                 </div>
             </div>
         </div>
+        
+                <!-- BUTTON -->
+        <div class="button">
+            <a class="button-a" href="#">
+                <img class="app-image" src="https://www.beatstars.com/assets/img/info-banner/appstore.png" alt="">
+            </a>
+            <a class="button-a" href="#">
+                <img class="app-image" src="https://www.beatstars.com/assets/img/info-banner/googleplay.png" alt="">
+            </a>
+        </div>
+        <!-- <div class="button-container"> -->
+        <!-- <a href="#"> -->
+        <!-- <div class="btn"> -->
+        <!-- <img class="app-img" src="https://www.svgrepo.com/show/223032/playstore.svg" alt=""> -->
+        <!-- <div> -->
+        <!-- <p class="btn-text">GET IT ON</p> -->
+
+        <!-- <h3 class="btn-texth3">Google Play</h3> -->
+        <!-- </div> -->
+        <!-- </div> -->
+        <!-- </a> -->
+        <!-- <a href="#"> -->
+        <!-- <div class="btn"> -->
+        <!-- <img class="app-img-apple" src="https://www.svgrepo.com/show/25162/apple.svg" alt=""> -->
+        <!-- <div> -->
+        <!-- <p class="btn-text-apple">Download on the</p> -->
+
+        <!-- <h3 class="btn-texth3">APP Store</h3> -->
+        <!-- </div> -->
+        <!-- </div> -->
+        <!-- </a> -->
+        <!-- </div> -->
+
+        <div class="footer">
+            <div class="footer-flex">
+
+                <!-- <div class="footer-section"> -->
+                <!-- <img class="flexbox-logo" src="https://blissful-hugle-8249d8.netlify.app/images/flexbox-icon.png" -->
+                <!-- alt=""> -->
+                <!-- </div> -->
+
+                <div class="footer-section">
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-twitch"></i>
+                    <i class="fa-brands fa-spotify"></i>
+                    <i class="fa-solid fa-music"></i>
+                </div>
+            </div>
+        </div>
+
 
         <div class="overlay"></div>
         <div class="black"></div>
